# autopypi

./: MANIFEST.in  README.md  pyproject.toml
